# G4Worker

./: CMakeLists.txt  exp_1.mac  init_vis.mac
Analysis/: EdepVsZAnalysis.py  dEPerStep.py
Experiments/: GaN_AlGan_battery_exp.h
macroses/: experiment_GaN_stack.mac  init.mac  init_vis.mac  run.mac  vis.mac
src/: main.cpp
src/Core/include/: App.h  DetectorConstruction.h  GeantCore.h  Materials.h  SourceGenerator.h  SteppingAction.h
src/Core/include/Actions/: RunAction.h  SteppingAction.h
src/Core/include/Detectors/: DetectorConstruction.h  DetectorManager.h
src/Core/include/Messengers/: CommandBuilder.h  CommandManager.h  ExperimentMessenger.h
src/Core/include/messengers/: CommandBuilder.h  CommandManager.h  ExperimentMessenger.h
src/Core/src/: App.cpp  DetectorConstruction.cpp  GeantCore.cpp  Materials.cpp  RunAction.cpp  SourceGenerator.cpp  SteppingAction.cpp
src/Core/src/Actions/: RunAction.cpp  SteppingAction.cpp
src/Core/src/Detectors/: DetectorConstruction.cpp
src/Core/src/Messengers/: ExperimentMessenger.cpp
src/Core/src/messengers/: ExperimentMessenger.cpp
src/Infrastructure/: DIContainer.h
src/Infrastructure/Services/: EventManager.h
src/Infrastructure/Services/Interfaces/: IEventManager.h
src/Models/: ExperimentInfo.h
src/Utils/: Events.h  FileProvider.h  Logger.h
src/Utils/Constants/: AppPaths.h
